--- a/server/package.json
+++ b/server/package.json
@@ -2,5 +2,10 @@
   "dependencies": {
     "firebase-admin": "^12.1.1",
     "firebase-functions": "^5.0.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
+    "typescript": "^5.4.5"
   }
 }
