--- a/client/functions/package.json
+++ b/client/functions/package.json
@@ -14,14 +14,12 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "cors": "^2.8.5",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "firebase-functions-test": "^3.1.0",
-    "typescript": "^4.9.0"
+    "typescript": "^4.9.0",
+    "firebase-functions-test": "^3.1.0"
   },
   "private": true
 }
