--- a/client/functions/package.json
+++ b/client/functions/package.json
@@ -15,7 +15,8 @@
   "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^12.1.0",
-    "firebase-functions": "^5.0.1"
+    "firebase-functions": "^5.0.1",
+    "googleapis": "^140.0.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0",
